fix responsive on mobile

--- a/front/public/css/stylesheet.css
+++ b/front/public/css/stylesheet.css
@@ -6,8 +6,6 @@ html, body, div#root {
     width: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
